# Multi-Industry_ERPNext_Coagents_SaaS

./: .env.example  .gitignore  .ignore  .service-pids  3_STEPS_VISUAL.txt  AGENT_ARCHITECTURE_BEST_PRACTICES.md  AGUI_INTEGRATION_READY.md  AGUI_NATIVE_INTEGRATION.md  API_CLIENT_UPDATE.md  API_QUICK_REF.md  API_REFACTORING_SUMMARY.md  ARCHITECTURE_UPDATES.md  BACKEND_INTEGRATION_COMPLETE.md  BUILD_FIX_COMPLETE.md  BUILD_FIX_VISUAL.txt  BUILD_OPTIMIZATION.md  CLAUDE_AGENT_SDK_ANALYSIS.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_DEPLOYMENT_SUMMARY.md  CLOUDFLARE_DEPLOY_GUIDE.md  CLOUDFLARE_DEPLOY_QUICKSTART.md  CLOUDFLARE_ENV_SETUP.md  CLOUDFLARE_FREE_TIER_DEPLOY.md  CLOUDFLARE_QUICK_REF.md  CODE_REVIEW_OPENROUTER_MIGRATION.md  COMPLETE_IMPROVEMENTS_INDEX.md  CONTEXT7_CORRECT_USAGE.md  COPILOTKIT_COAGENTS_INTEGRATION.md  COPILOTKIT_EMBEDDED_COMPLETE.md  COPILOTKIT_INTEGRATION_COMPLETE.md  COPILOTKIT_INTEGRATION_PLAN.md  COPILOTKIT_QUICK_REF.md  COPILOTKIT_QUICK_REFERENCE.md  COPILOTKIT_UPDATE.md  COPILOTKIT_UPDATE_SUMMARY.md  CRITICAL_PATH_3_STEPS.md  CURRENT_STATE_SUMMARY.md  CURRENT_STATUS.md  DEPLOY.sh  DEPLOYMENT_CHECKLIST.md  (+163 more)
.todo/: tasks.md
LICENSES/: VERCEL_AI_CHATBOT.txt
agents/: deep-research.md  education-specialist.md  hospital-specialist.md  hotel-specialist.md  manufacturing-specialist.md  orchestrator.md  retail-specialist.md
docs/: erpnext-copilot-flow.md
logs/: .gitkeep  rotation-config.json
scripts/: update-openrouter-model.sh
services/generator/: pyproject.toml  wrangler.toml
setup/: schema.sql
src/: __init__.py  agent.py
(+535 files in other folders)
