[tool.poetry]
name = "erpnext-coagent-generator"
version = "1.0.0"
description = "SaaS app generator for ERPNext coagents"
authors = ["ERPNext Coagents Team"]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
pydantic = "^2.5.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
anthropic = "^0.8.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.7.0"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
